--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <a href="#0" class="card-link">
               <article class="card card_type_film">
                 <div class="overlay"></div>
-                <div>
+                <div class="card">
                   <h3 class="card__title">Фильм режиссёра, который  бросил киношколу</h3>
                   <div class="card__text">
                     <p>Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?</p>
@@ -72,7 +72,7 @@
             <a href="#0" class="card-link">
               <article class="card card_type_book">
                 <div class="overlay"></div>
-                <div>
+                <div class="card">
                   <h3 class="card__title">Книга, где описан один скучный день из жизни рекламного агента</h3>
                   <div class="card__text">
                     <p>Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на древнеанглийский. 
@@ -88,7 +88,7 @@
             <a href="#0" class="card-link">
               <article class="card card_type_picture">
                 <div class="overlay"></div>
-                <div>
+                <div class="card">
                   <h3 class="card__title">Картина, которую повторит даже 5-летний сын маминой подруги</h3>
                   <div class="card__text">
                     <p>Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на 
@@ -125,15 +125,14 @@
         </div>
       </section>
     </main>
-    <footer>
-      <div class="address">
-        <a href="tel:+70000000">+9 999 555 5555</a>
+    <footer class="footer">
+      <address class="address">
+        <a href="tel:+70000000">+9 999 555 5555</a><br>
         <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-        <address>
-          наб. Принсенграхт 263-265,<br>
-          Амстердам
-        </address>
-      </div>
+        <p>
+          наб. Принсенграхт 263-265, Амстердам
+        </p>
+      </address>
       <nav class="footer__menu">
         <ul class="footer__menu-list">
           <li class="footer__menu-list-item">
