--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
       <nav class="header__menu">
         <ul class="header__links-list">
           <li class="header__links-list-item header__links-list-item_no-bullit">
-            <a class="header__link header__link_active">главная</a>
+            <a href="#0" class="header__link header__link_active">главная</a>
           </li>
           <li class="header__links-list-item">
-            <a class="header__link" href="#0">посмотреть лоты</a>
+            <a href="#0" class="header__link">посмотреть лоты</a>
           </li>
           <li class="header__links-list-item">
-            <a class="header__link" href="#0">об аукционе</a>
+            <a href="#0" class="header__link">об аукционе</a>
           </li>
         </ul>
       </nav>
@@ -59,11 +59,9 @@
             <a href="#0" class="card-link">
               <article class="card card_type_film">
                 <div class="overlay"></div>
-                <div class="card">
-                  <h3 class="card__title">Фильм режиссёра, который  бросил киношколу</h3>
-                  <div class="card__text">
-                    <p>Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?</p>
-                  </div>
+                <h3 class="card__title">Фильм режиссёра, который  бросил киношколу</h3>
+                <div class="card__text">
+                  <p>Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?</p>
                 </div>
               </article>
             </a>
@@ -72,7 +70,6 @@
             <a href="#0" class="card-link">
               <article class="card card_type_book">
                 <div class="overlay"></div>
-                <div class="card">
                   <h3 class="card__title">Книга, где описан один скучный день из жизни рекламного агента</h3>
                   <div class="card__text">
                     <p>Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на древнеанглийский. 
@@ -80,7 +77,6 @@
                       античных времён. И это всё накладывается на эпическую поэму Гомера. 
                       Сколько бы вы поставили на «Улисса» Джеймса Джойса?</p>
                   </div>
-                </div>
               </article>
             </a>
           </li>
@@ -88,14 +84,12 @@
             <a href="#0" class="card-link">
               <article class="card card_type_picture">
                 <div class="overlay"></div>
-                <div class="card">
                   <h3 class="card__title">Картина, которую повторит даже 5-летний сын маминой подруги</h3>
                   <div class="card__text">
                     <p>Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на 
                       инфузорию-туфельку. Никаких полей, лесов, котиков… Сколько бы вы на такое поставили,
                       если бы не знали, что это — одна из революционных работ Кандинского?</p>
                   </div>
-                </div>
               </article>
             </a>
           </li>
@@ -139,10 +133,10 @@
             <a href="#0" class="footer__menu-link footer__menu-link_active">главная</a>
           </li>
           <li class="footer__menu-list-item">
-            <a href="#0" class="footer__menu-link" href="#0">посмотреть лоты</a>
+            <a href="#0" class="footer__menu-link">посмотреть лоты</a>
           </li>
           <li class="footer__menu-list-item">
-            <a href="#0" class="footer__menu-link" href="#0">об аукционе</a>
+            <a href="#0" class="footer__menu-link">об аукционе</a>
           </li>
         </ul>
       </nav>
